human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_17.wast
(assert_invalid
  (module (func $type-cond-empty-vs-i32
    (block (br_if 0))
  ))
  "type mismatch"
)